@@ -22,6 +22,7 @@ Changelog for 1.4.15
 * Fix printing of payments (GH 733) (JohnL)
 * Fix deletion of reporting unit class (SF 1378) (ErikH)
 * Fix warnings in webserver logs on contact screen/search (ErikH)
+* Fix false values of social security/tax id number for employee (Chris T)
 
 ErikH is Erik Huelsmann
 ChrisT is Chris Travers
